<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MapFragment"
    style="AppTheme">

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="@dimen/banner_height"
        android:layout_height="@dimen/banner_height"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:src="@raw/banner_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logo_title"
        android:contentDescription="@string/banner_icon_text" />

    <TextView
        android:id="@+id/logo_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/banner_height"
        android:minHeight="?actionBarSize"
        android:textSize="@dimen/title_font_size"
        android:padding="@dimen/appbar_padding"
        android:text="@string/main_title"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintStart_toEndOf="@+id/logo_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/logo_title"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>