...


    <!-- MAIN ACTIVITY -->
    <string name="app_my_info">Thank you for reviewing DoorDash Lit(e) - built by Caterina Lazaro</string>

    <!-- TABS AND PAGES STRINGS -->
    <string name="tab_text_1">List</string>
    <string name="tab_text_2">Map</string>
    <string name="page_text">Welcome to the page </string>
    <string name="banner_icon_text">lit icon </string>

    <!-- RESTAURANT LIST FRAGMENT STRINGS-->
    <string name="refresh_text">Refresh</string>
    <string name="more_text">More</string>
...
